[package]
name = "dragonfly-api"
version = "2.2.28"
authors = ["Gaius <gaius.qi@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://d7y.io"
repository = "https://github.com/dragonflyoss/api"
description = "Canonical location of the Dragonfly API definition"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.2"
prost-types = "0.14.2"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
prost-wkt-types = "0.7"

[build-dependencies]
tonic-prost-build = "0.14.2"
